syntax = "proto3";
package deliver;
option go_package = ".";

// 定义服务
service CenterPlatform {
    // 传递事件信息
    rpc SendEvent(EventRequest) returns (EventResponse) {}

    // 服务端流式 RPC
    rpc ServerStream(ControllRequest) returns (stream ControllResponse) {}
}


message EventRequest {
    string projectNumber = 1;
    string eventCode = 2;
}

message EventResponse {
    string projectNumber = 1;
    string eventCode = 2;
    string message = 3;
}

message ControllRequest {
    string projectNumber = 1;
}

message ControllResponse {
    ControllA a = 1;
    ControllB b = 2;
}

message ControllA {
    string a1 = 1;
    int64 a2 = 2;
}

message ControllB {
    string b1 = 1;
    bool b2 = 2;
}